# Kyphra

./: .cursorrules  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  TAXONOMY.md  pyproject.toml
inicio Cursor/: 01-setup-y-primer-prompt.md  02-classifier-hook-main-logger.md  probar-hook-en-claude-code.md
kyphra/: __init__.py
kyphra/cli/: __init__.py  audit.py
kyphra/hook/: __init__.py  classifier.py  config.py  file_inspect.py  levels.py  logger.py  main.py  notifier.py  org_context.py  redactor.py  secrets.py
kyphra/taxonomy/: __init__.py  categories.py  system_prompt.py
scripts/: kyphra-claude-hook.sh
tests/: golden_set.jsonl  test_categories.py  test_classifier.py  test_file_inspect.py  test_golden_set.py  test_hook_main.py  test_levels.py  test_notifier.py  test_redactor.py  test_secrets.py
workers/openrouter-classifier/: README.md  wrangler.toml
workers/openrouter-classifier/src/: index.ts
