[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kyphra"
version = "0.0.1"
description = "Privacy and confidentiality classifier for developer prompts sent to AI assistants."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Alejandro Latorre" }]
keywords = ["security", "privacy", "llm", "dlp", "ai-governance"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
]
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.6",
    "cryptography>=42.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[project.scripts]
kyphra = "kyphra.cli.audit:app"

[tool.hatch.build.targets.wheel]
packages = ["kyphra"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",            # isort
    "B",            # flake8-bugbear
    "UP",           # pyupgrade
    "N",            # pep8-naming
    "S",            # flake8-bandit (security)
    "RET",          # flake8-return
    "SIM",          # flake8-simplify
]
ignore = [
    "E501",  # line length handled by formatter
    "S101",  # allow asserts in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "N"]
"kyphra/hook/secrets.py" = ["S105"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
